--- a/u4review.html
+++ b/u4review.html
@@ -129,12 +129,14 @@
 
     <main>
       <h2>Linear Modeling and Logic Unit </h2>
+      <br>
   
 <h4>Linear Modeling and Logic Review</h4>
-
+<br>
 <ol>
     <li>Write a linear equation for the cost of leasing a car with a $1000 down payment and a $360 per month charge.</li>
     <p class="solution">y = 360x + 1000</p>
+
     <li>State and interpret the rate of change shown in the graph:</li>
 <img src="images/u4reviewp2.png" alt="A linear graph that is decreasing from left to right. The x-axis represents the hours and goes from 0 to 8 counting by 1. The y-axis represents the money in the wallet and goes from 0 to 50 counting by 10. Two points on the graph are (0,50) and (8,0). ">
 <p class="solution">The money in the wallet decreases by $6.25 per hour spent at the casino</p>
@@ -144,10 +146,14 @@
 <img src="images/u4reviewp3.png" alt="A linear graph that is increasing from left to right. The x-axis represents the years and goaes from 0 to 6 counting by 1. The y-axis represents the profit in dollars and goes from -15000 to 20000 counting by 5000. Two points on the line are (0,-10000) and (6,20000). ">
 <p class="solution">y = 5000x - 10000</p>
 
+<p style="page-break-before: always"></p>
+
 <li>The U-Haul in Knoxville charges $39.95 for a 20 foot moving truck plus $0.89 per mile that a customer drives the truck over one weekend. Write a linear equation that models the total cost of the truck for one weekend. Complete a table of values for the equation and graph the equation.</li>
 
 <p>Equation:</p>
 <p class="solution">y = 0.89x + 39.95</p>
+
+
 
 <style type="text/css">
     .tg  {border-collapse:collapse;border-spacing:0;}
@@ -158,7 +164,7 @@
     </style>
     <table class="tg">
       <tr>
-        <th class="tg-s268"><p class="solution">0</p></th>
+        <th class="tg-s268"><p class="solution">0 &emsp;&emsp;</p></th>
         <th class="tg-s268"><p class="solution">39.95</p></th>
       </tr>
       <tr>
@@ -182,10 +188,19 @@
         <td class="tg-0lax"><p class="solution">66.65</p></td>
       </tr>
     </table>
+ 
 
-    <img src="images/u4blankgraph.png" alt="This is a blank coordinate plane for constructing the graph."> 
+    <br>
+
+    <img src="images/u4blankgraph.png"  alt="This is a blank coordinate plane for constructing the graph."> 
+
+ 
+
     <p class="solution"><img src="images/u4reviewp4k.png" alt="A linear graph that increases from left to right. The x-axis represents the distance in miles and goes from 0 to 25 counting by 5. The y-axis represents the total cost in dollars and goes from 0 to 75 counting by 5. Two points on the graph are (0,40) and (30,65). "></p>
     
+    <p style="page-break-before: always"></p>
+
+
     <li>Joseph spent his vacation time in Kalamazoo, Michigan, a distance of 552 miles from his home. He drives home at an average speed of 55 mph.
         <ol>
             <li>What is the independent variable and the dependent variable in this scenario.</li>
@@ -206,6 +221,8 @@
 <p class="solution">150</p>
 
 <img src="images/u4reviewp7.png" alt="A Venn Diagram titled with two intersecting circles. One circle represents the number of doctors and the other circle represents the number of women. The number 20 is in the intersection of the circles. The number 150 is in the doctors circle and the number 275 is in the women circle. The number 162 is outside both circles."> 
+
+<p style="page-break-before: always"></p>
 
 <li>Draw a Venn diagram to represent the following information: At a high school 70 students are involved in cross country or swimming. Fifty students run cross country and 40 students are on the swim team. How many students both run cross country and belong to the swim team?</li>
 <p class="solution"><img src="images/u4reviewp8k.png" alt="A Venn Diagram with two intersecting circles. One circle represents the number of cross country runners and the other circle represents the number of swimmers. The number 20 is in the intersection of the circles. The number 30 is in the cross country circle and the number 20 is in the swimmer circle."></p>
@@ -234,6 +251,9 @@
 <p>Is the argument valid or invalid?</p>
 <p class="solution"><img src="images/u4reviewp11k.png" alt="A Venn Diagram with a small circle completely inside a large circle. The large circle represents containing iron. The small circle represents red meat. There is an X inside the red meat circle."></p>
 <p class="solution">The argument is valid.</p>
+
+
+<p style="page-break-before: always"></p>
 
 <p><b>For problems 12-15, identify if a logical fallacy was used in the argument; explain.</b></p>
 
