edits to unit 1

--- a/u1fs.html
+++ b/u1fs.html
@@ -142,28 +142,31 @@
     <main>
       <h2>Finance Unit</h2>
   
-
       <h3>Formula Sheet</h3>
 
    <br>
    <br>
 <h4>Simple Interest</h4>  
-\(I=P \times R \times T\)
+<font size="6">
+  \(I=P \times R \times T\)</font>
 <br>
 <br>
 <br>
 <h4>Compound Interest</h4>
-\(A=P\left(1+\frac{R}{n}\right)^{n T}\)
+<font size="6">
+  \(A=P\left(1+\frac{R}{n}\right)^{n T}\)</font>
 <br>
 <br>
 <br>
 <h4>Annuity</h4>
-\(A=P M T \times \frac{\left[\left(1+\frac{R}{n}\right)^{n T}-1\right]}{\left(\frac{R}{n}\right)}\)
+<font size="6">
+  \(A=P M T \times \frac{\left[\left(1+\frac{R}{n}\right)^{n T}-1\right]}{\left(\frac{R}{n}\right)}\)</font>
 <br>
 <br>
 <br>
 <h4>Loan Payment</h4>
- \(P M T=\frac{\left[P \times\left(\frac{R}{n}\right)\right]}{\left[1-\left(1+\frac{R}{n}\right)^{-n T}\right]}\)    
+<font size="6">
+  \(P M T=\frac{\left[P \times\left(\frac{R}{n}\right)\right]}{\left[1-\left(1+\frac{R}{n}\right)^{-n T}\right]}\) </font>   
      
 
 
