--- a/u1s4.html
+++ b/u1s4.html
@@ -148,7 +148,7 @@
 </p>
 </p>
       <ol>
-        <li> 	Turn your calculator on.  Press <b>2nd</b> <b>ENTER</b>.  What is the ID of your calculator: ___________________.
+        <li> 	Turn your calculator on.  Press <b>2nd</b> <b>MEM</b> <b>ENTER</b>.  What is the ID of your calculator: ___________________.
            
         </li>
           <br>
