--- a/u1s5.html
+++ b/u1s5.html
@@ -213,7 +213,7 @@
 
         <li>	Evaluate \(A=P M T \times \frac{\left[\left(1+\frac{R}{n}\right)^{n t}-1\right]}{\left(\frac{R}{n}\right)}  \text { when } P M T=\$ 250, R=0.02, t=20, \text { and } n=12\)
             <p class="solution"> \(A=\frac{250\left[\left(1+{\displaystyle\frac{.02}{12}}\right)^{12\ast20}-1\right]}{\left({\displaystyle\frac{.02}{12}}\right)}\)</p>
-            <p class="solution"> \(A=$73,669.21\)</p>
+            <p class="solution"> \(A=$73,699.21\)</p>
         </li>
       
 
@@ -226,6 +226,7 @@
                 <p class="solution"> \(5^{2}+12^{2}=c^{2}\)</p>
                 <p class="solution"> \(c^{2}=25+144\)</p>
                 <p class="solution"> \(c^{2}=169\)</p>
+                <p class="solution"> \(\sqrt{c^2}=\sqrt{169}\)</p>
                 <p class="solution"> \(c=13\)</p>
         </li>
 
