--- a/u1s1.html
+++ b/u1s1.html
@@ -195,72 +195,90 @@
         <p class="solution">D is the correct answer.  The number of women was 1.8 times the number of men</p>
         <li>Madison can drive her car 480 miles at a steady speed using 15 gallons of gasoline. Complete the table showing the number of miles she can drive her car at this speed using the given amount of gasoline.
           <p class="solution">
-              <style type="text/css">
-                .tg  {border-collapse:collapse;border-spacing:0;}
-                .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-                .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-                .tg .tg-0lax{text-align:left;vertical-align:top}
-                </style>
-                <table class="tg">
-                  <tr>
-                    <th class="tg-0lax">Number of gallons of gasoline</th>
-                    <th class="tg-0lax">Number of miles she can drive at this steady speed</th>
-                  </tr>
-                  <tr>
-                    <td class="tg-0lax">1</td>
-                    <td><span class="solution">32</span></td>
-                  </tr>
-                  <tr>
-                    <td class="tg-0lax">2</td>
-                    <td><span class="solution">64</span></td>
-                  </tr>
-                  <tr>
-                    <td class="tg-0lax">3</td>
-                    <td><span class="solution">96</span></td>
-                  </tr>
-                  <tr>
-                    <td class="tg-0lax">4</td>
-                    <td><span class="solution">128</span></td>
-                  </tr>
-                  <tr>
-                    <td class="tg-0lax">5</td>
-                    <td><span class="solution">160</span></td>
-                  </tr>
-                  <tr>
-                    <td class="tg-0lax">6</td>
-                    <td><span class="solution">192</span></td>
-                  </tr>
-                  <tr>
-                    <td class="tg-0lax">7</td>
-                    <td><span class="solution">224</span></td>
-                  </tr>
-                </table>
+             
+
+
+                <style type="text/css">
+                  .tg  {border-collapse:collapse;border-spacing:0;}
+                  .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+                  .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+                  .tg .tg-baqh{text-align:center;vertical-align:top}
+                  </style>
+                  <table class="tg">
+                    <tr>
+                      <th class="tg-baqh">Number of gallons of gasoline</th>
+                      <th class="tg-baqh">Number of miles she can drive at this steady speed</th>
+                    </tr>
+                    <tr>
+                      <td class="tg-baqh">1</td>
+                      <td class="tg-baqh"><span class="solution">32</span></td>
+                    </tr>
+                    <tr>
+                      <td class="tg-baqh">2</td>
+                      <td class="tg-baqh"><span class="solution">64</span></td>
+                    </tr>
+                    <tr>
+                      <td class="tg-baqh">3</td>
+                      <td class="tg-baqh"><span class="solution">96</span></td>
+                    </tr>
+                    <tr>
+                      <td class="tg-baqh">4</td>
+                      <td class="tg-baqh"><span class="solution">128</span></td>
+                    </tr>
+                    <tr>
+                      <td class="tg-baqh">5</td>
+                      <td class="tg-baqh"><span class="solution">160</span></td>
+                    </tr>
+                    <tr>
+                      <td class="tg-baqh">6</td>
+                      <td class="tg-baqh"><span class="solution">192</span></td>
+                    </tr>
+                    <tr>
+                      <td class="tg-baqh">7</td>
+                      <td class="tg-baqh"><span class="solution">224</span></td>
+                    </tr>
+                  </table>
+
+
+
+
+
+
+
+
+
           </p>
 
         </li>
         <li>The Trail Mix Calorie Counter gives the following information on its website. Use the pattern in the table to answer the questions.
-            <table class="table table-bordered table-reponsive">
-                <tr>
-                  <th>Grams of trail mix</th>
-                  <th>Calories</th>
-                </tr>
-                <tr>
-                  <td>50</td>
-                  <td>220</td>
-                </tr>
-                <tr>
-                  <td>150</td>
-                  <td>660</td>
-                </tr>
-                <tr>
-                  <td>300</td>
-                  <td>1320</td>
-                </tr>
-                <tr>
-                  <td>500</td>
-                  <td>2200</td>
-                </tr>
-              </table>
+          <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;}
+            .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 15px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+            .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 15px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+            .tg .tg-baqh{text-align:center;vertical-align:top}
+            </style>
+            <table class="tg">
+              <tr>
+                <th class="tg-baqh">Grams of trail mix</th>
+                <th class="tg-baqh">Calories</th>
+              </tr>
+              <tr>
+                <td class="tg-baqh">50</td>
+                <td class="tg-baqh">220</td>
+              </tr>
+              <tr>
+                <td class="tg-baqh">150</td>
+                <td class="tg-baqh">660</td>
+              </tr>
+              <tr>
+                <td class="tg-baqh">300</td>
+                <td class="tg-baqh">1320</td>
+              </tr>
+              <tr>
+                <td class="tg-baqh">500</td>
+                <td class="tg-baqh">2200</td>
+              </tr>
+            </table>
               <ol>
                 <li>Eddie eats 75 grams of trail mix. How many calories does he eat?</li>
                 <p class="solution"> \(\frac{50\;grams}{220\;calories}=\frac{75\;grams}{x\;calories}\)</p>
