--- a/u1s9.html
+++ b/u1s9.html
@@ -147,9 +147,13 @@
 
 <ol>
 
- <li>Make/model of car: ____________________</li>   
+ <li>Make/model of car: ____________________
+  <p class="solution">CR-V</p>
+ </li>   
 
- <li>Price of car: ____________________</li>
+ <li>Price of car: ____________________
+  <p class="solution">$25,345</p>
+ </li>
 
 </ol>
 
@@ -160,27 +164,43 @@
 <p>2)   <u>	<font color="red">PURCHASE AND</font></u></p>
 <p>3)	<u><font color="red">SELECT A PRODUCT</font></u></p>
 <ol>
-<li>Length of loan: ____________________</li>
-<li>Interest rate: _____________________</li>
+<li>Length of loan: ____________________
+  <p class="solution">60 months</p>
+</li>
+<li>Interest rate: _____________________
+  <p class="solution"> 7.91%</p>
+</li>
 </ol>
     </li>
 
 
 <li>Calculate your monthly payment. Show formula and numbers used in the calculation.
 
-<p>Monthly payment: ____________________ (keep in mind that this number does not include car insurance, maintenance, or gasoline)</p></li>
+<p>Monthly payment: ____________________ (keep in mind that this number does not include car insurance, maintenance, or gasoline)</p>
+<p class="solution">  
+\(P M T=\frac{\left[P \times\left(\frac{R}{n}\right)\right]}{\left[1-\left(1+\frac{R}{n}\right)^{-n T}\right]}\)</p>
+<p class="solution"> 
+\(PMT=\frac{25345\left({\displaystyle\frac{.0791}{12}}\right)}{\left[1-\left(1+{\displaystyle\frac{.0791}{12}}\right)^{-12\ast5}\right]}\)</p>
+<p class="solution"> $512.81</p>
+</li>
 
 <li>Calculate the total amount paid over the life of the loan: ____________________
-
+  <p class="solution"> \(512.81*12*5=$30,768.60\)</p>
     </li>
 
     <li>Now suppose you want to buy this same car, but you started saving for it five years ago.  You just put the money aside in a cookie jar under your bed. How much money would you have needed to save per month for the last five years to accumulate enough money to buy the car without a loan?
 
-    <p>Monthly savings needed: ____________________</p></li>
+    <p>Monthly savings needed: ____________________</p>
+    <p class="solution"> \(25,345/60=$422.42\)</p>
+  </li>
 
     <li>What if you had been saving for the past five years by making monthly deposits in a mutual fund that effectively paid 5% interest on your investment? How much money would you have needed to invest per month for the last five years to accumulate enough money to buy the car? Use the annuity formula where A is the price of your car.  Solve for the PMT. Show formula and calculations used.
 
-    <p>Monthly savings needed: ____________________</p></li>
+    <p>Monthly savings needed: ____________________</p>
+    <p class="solution">\(A=P M T \times \frac{\left[\left(1+\frac{R}{n}\right)^{n T}-1\right]}{\left(\frac{R}{n}\right)}\) </p>
+    <p class="solution">\(25,345=PMT\frac{\left[\left(1+{\displaystyle\frac{.05}{12}}\right)^{12\ast5}-1\right]}{\left({\displaystyle\frac{.05}{12}}\right)}\)</p>
+    <p class="solution">$372.69</p>
+  </li>
 
     <li>Compare taking out a loan to buy a car versus saving in advance to buy a car. Which would you do and why?</li>
 
