--- a/u2s6.html
+++ b/u2s6.html
@@ -428,7 +428,7 @@
 </ol>
 
 </li>
-
+<li>Insert an empty row above all the data.</li>
 <li>Filter the data so that only the Southeast states are showing. </li>
 
 <li>Sort the income tax column.</li>
