edits and making tables accessible

--- a/u1s1.html
+++ b/u1s1.html
@@ -206,35 +206,35 @@
                   </style>
                   <table class="tg">
                     <tr>
-                      <th class="tg-baqh">Number of gallons of gasoline</th>
-                      <th class="tg-baqh">Number of miles she can drive at this steady speed</th>
+                      <th class="tg-baqh" scope="col">Number of gallons of gasoline</th>
+                      <th class="tg-baqh" scope="col">Number of miles she can drive at this steady speed</th>
                     </tr>
                     <tr>
-                      <td class="tg-baqh">1</td>
+                      <th class="tg-baqh" scope="row">1</th>
                       <td class="tg-baqh"><span class="solution">32</span></td>
                     </tr>
                     <tr>
-                      <td class="tg-baqh">2</td>
+                      <th class="tg-baqh" scope="row">2</th>
                       <td class="tg-baqh"><span class="solution">64</span></td>
                     </tr>
                     <tr>
-                      <td class="tg-baqh">3</td>
+                      <th class="tg-baqh" scope="row">3</th>
                       <td class="tg-baqh"><span class="solution">96</span></td>
                     </tr>
                     <tr>
-                      <td class="tg-baqh">4</td>
+                      <th class="tg-baqh" scope="row">4</th>
                       <td class="tg-baqh"><span class="solution">128</span></td>
                     </tr>
                     <tr>
-                      <td class="tg-baqh">5</td>
+                      <th class="tg-baqh" scope="row">5</th>
                       <td class="tg-baqh"><span class="solution">160</span></td>
                     </tr>
                     <tr>
-                      <td class="tg-baqh">6</td>
+                      <th class="tg-baqh" scope="row">6</th>
                       <td class="tg-baqh"><span class="solution">192</span></td>
                     </tr>
                     <tr>
-                      <td class="tg-baqh">7</td>
+                      <th class="tg-baqh" scope="row">7</th>
                       <td class="tg-baqh"><span class="solution">224</span></td>
                     </tr>
                   </table>
