--- a/u1s10.html
+++ b/u1s10.html
@@ -149,68 +149,68 @@
 
 
 
-        <style type="text/css">
-          .tg  {border-collapse:collapse;border-spacing:0;}
-          .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 19px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-          .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 19px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-          .tg .tg-baqh{text-align:center;vertical-align:top}
-          </style>
-          <table class="tg">
+    <style type="text/css">
+      .tg  {border-collapse:collapse;border-spacing:0;}
+      .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+      .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+      .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
+      </style>
+      <table class="tg">
             <tr>
-              <th class="tg-baqh">Month that minimum <br>payment is to be made</th>
-              <th class="tg-baqh">Principal amount owed</th>
-              <th class="tg-baqh">24% APR <br>(Annual Percentage Rate)  <br>I=Prt</th>
-              <th class="tg-baqh">Sum of principal + interest</th>
-              <th class="tg-baqh">Amount of monthly minimum payment</th>
-              <th class="tg-baqh">Total amount that is still owed <br>after monthly payment is made</th>
+              <th class="tg-13pz" scope="col">Month that minimum <br>payment is to be made</th>
+              <th class="tg-13pz" scope="col">Principal amount owed</th>
+              <th class="tg-13pz" scope="col">24% APR <br>(Annual Percentage Rate)  <br>I=Prt</th>
+              <th class="tg-13pz" scope="col">Sum of principal + interest</th>
+              <th class="tg-13pz" scope="col">Amount of monthly minimum payment</th>
+              <th class="tg-13pz" scope="col">Total amount that is still owed <br>after monthly payment is made</th>
             </tr>
             <tr>
-              <td class="tg-baqh">February</td>
-              <td class="tg-baqh">$3,500.00</td>
-              <td class="tg-baqh">$0 (interest free period)</td>
-              <td class="tg-baqh">$3,500.00</td>
-              <td class="tg-baqh">$105</td>
-              <td class="tg-baqh">$3,395.00</td>
+              <th class="tg-13pz" scope="row">February</th>
+              <td class="tg-13pz">$3,500.00</td>
+              <td class="tg-13pz">$0 (interest free period)</td>
+              <td class="tg-13pz">$3,500.00</td>
+              <td class="tg-13pz">$105</td>
+              <td class="tg-13pz">$3,395.00</td>
             </tr>
             <tr>
-              <td class="tg-baqh">March</td>
-              <td class="tg-baqh">$3,395.00</td>
-              <td class="tg-baqh">$67.90</td>
-              <td class="tg-baqh">$3,462.90</td>
-              <td class="tg-baqh">$105</td>
-              <td class="tg-baqh">$3,357.90</td>
+              <th class="tg-13pz" scope="row">March</th>
+              <td class="tg-13pz">$3,395.00</td>
+              <td class="tg-13pz">$67.90</td>
+              <td class="tg-13pz">$3,462.90</td>
+              <td class="tg-13pz">$105</td>
+              <td class="tg-13pz">$3,357.90</td>
             </tr>
             <tr>
-              <td class="tg-baqh">April</td>
-              <td class="tg-baqh">$3,357.90</td>
-              <td class="tg-baqh"><p class="solution">$67.16</p></td>
-              <td class="tg-baqh"><p class="solution">$3,425.06</p></td>
-              <td class="tg-baqh">$105</td>
-              <td class="tg-baqh"><p class="solution">$3,320.06</p></td>
+              <th class="tg-13pz" scope="row">April</th>
+              <td class="tg-13pz">$3,357.90</td>
+              <td class="tg-13pz"><p class="solution">$67.16</p></td>
+              <td class="tg-13pz"><p class="solution">$3,425.06</p></td>
+              <td class="tg-13pz">$105</td>
+              <td class="tg-13pz"><p class="solution">$3,320.06</p></td>
             </tr>
             <tr>
-              <td class="tg-baqh">May</td>
-              <td class="tg-baqh"><p class="solution">$3,320.06</p></td>
-              <td class="tg-baqh"><p class="solution">$66.40</p></td>
-              <td class="tg-baqh"><p class="solution">$3,386.46</p></td>
-              <td class="tg-baqh">$105</td>
-              <td class="tg-baqh"><p class="solution">$3,281.46</p></td>
+              <th class="tg-13pz" scope="row">May</th>
+              <td class="tg-13pz"><p class="solution">$3,320.06</p></td>
+              <td class="tg-13pz"><p class="solution">$66.40</p></td>
+              <td class="tg-13pz"><p class="solution">$3,386.46</p></td>
+              <td class="tg-13pz">$105</td>
+              <td class="tg-13pz"><p class="solution">$3,281.46</p></td>
             </tr>
             <tr>
-              <td class="tg-baqh">June</td>
-              <td class="tg-baqh"><p class="solution">$3,281.46</p></td>
-              <td class="tg-baqh"><p class="solution">$65.63</p></td>
-              <td class="tg-baqh"><p class="solution">$3,347.09</p></td>
-              <td class="tg-baqh">$105</td>
-              <td class="tg-baqh"><p class="solution">$3,242.09</p></td>
+              <th class="tg-13pz" scope="row">June</th>
+              <td class="tg-13pz"><p class="solution">$3,281.46</p></td>
+              <td class="tg-13pz"><p class="solution">$65.63</p></td>
+              <td class="tg-13pz"><p class="solution">$3,347.09</p></td>
+              <td class="tg-13pz">$105</td>
+              <td class="tg-13pz"><p class="solution">$3,242.09</p></td>
             </tr>
             <tr>
-              <td class="tg-baqh">July</td>
-              <td class="tg-baqh"><p class="solution">$3,242.09</p></td>
-              <td class="tg-baqh"><p class="solution">$64.84</p></td>
-              <td class="tg-baqh"><p class="solution">$3,306.93</p></td>
-              <td class="tg-baqh">$105</td>
-              <td class="tg-baqh"><p class="solution">$3,201.93</p></td>
+              <th class="tg-13pz" scope="row">July</th>
+              <td class="tg-13pz"><p class="solution">$3,242.09</p></td>
+              <td class="tg-13pz"><p class="solution">$64.84</p></td>
+              <td class="tg-13pz"><p class="solution">$3,306.93</p></td>
+              <td class="tg-13pz">$105</td>
+              <td class="tg-13pz"><p class="solution">$3,201.93</p></td>
             </tr>
           </table>
 
@@ -234,84 +234,84 @@
 <p>You recently went on vacation and charged the entire trip on your credit card. Your balance before the trip was $0, but now it is $4995. Suppose the annual interest rate is 23.24% and the minimum payment is $146.85. Complete the table to determine your credit balance after 8 months. Remember that the first month is interest free.</p>
 
 <p>
-  <style type="text/css">
-    .tg  {border-collapse:collapse;border-spacing:0;}
-    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 19px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 19px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-    .tg .tg-baqh{text-align:center;vertical-align:top}
-    </style>
-        <table class="tg">
+    <style type="text/css">
+      .tg  {border-collapse:collapse;border-spacing:0;}
+      .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+      .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+      .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
+      </style>
+      <table class="tg">
           <tr>
-            <th class="tg-baqh">Month that minimum<br>payment is to<br>be made</th>
-            <th class="tg-baqh">Principal amount owed</th>
-            <th class="tg-baqh">23.24% APR (Annual<br>Percentage<br>Rate)<br><br>I = Prt</th>
-            <th class="tg-baqh">Sum of principal +<br>interest</th>
-            <th class="tg-baqh">Amount of monthly minimum</span><br>payment</th>
-            <th class="tg-baqh">Total amount that is still owed after<br>monthly<br>payment is<br>made</th>
+            <th class="tg-13pz" scope="col">Month that minimum<br>payment is to<br>be made</th>
+            <th class="tg-13pz" scope="col">Principal amount owed</th>
+            <th class="tg-13pz" scope="col">23.24% APR (Annual<br>Percentage<br>Rate)<br><br>I = Prt</th>
+            <th class="tg-13pz" scope="col">Sum of principal +<br>interest</th>
+            <th class="tg-13pz" scope="col">Amount of monthly minimum</span><br>payment</th>
+            <th class="tg-13pz" scope="col">Total amount that is still owed after<br>monthly<br>payment is<br>made</th>
           </tr>
           <tr>
-            <td class="tg-baqh">July</td>
-            <td class="tg-baqh"><p class="solution">$4,995.00</p></td>
-            <td class="tg-baqh"><p class="solution">$0</p></td>
-            <td class="tg-baqh"><p class="solution">$4,995.00</p></td>
-            <td class="tg-baqh"><p class="solution">$146.85</p></td>
-            <td class="ttg-baqh"><p class="solution">$4,848.15</p></td>
+            <th class="tg-13pz" scope="row">July</th>
+            <td class="tg-13pz"><p class="solution">$4,995.00</p></td>
+            <td class="tg-13pz"><p class="solution">$0</p></td>
+            <td class="tg-13pz"><p class="solution">$4,995.00</p></td>
+            <td class="tg-13pz"><p class="solution">$146.85</p></td>
+            <td class="tg-13pz"><p class="solution">$4,848.15</p></td>
           </tr>
           <tr>
-            <td class="tg-baqh">August</td>
-            <td class="tg-baqh"><p class="solution">$4,848.15</p></td>
-            <td class="tg-baqh"><p class="solution">$93.89</p></td>
-            <td class="tg-baqh"><p class="solution">$4,942.04</p></td>
-            <td class="tg-baqh"><p class="solution">$146.85</p></td>
-            <td class="tg-baqh"><p class="solution">$4,795.19</p></td>
+            <th class="tg-13pz" scope="row">August</th>
+            <td class="tg-13pz"><p class="solution">$4,848.15</p></td>
+            <td class="tg-13pz"><p class="solution">$93.89</p></td>
+            <td class="tg-13pz"><p class="solution">$4,942.04</p></td>
+            <td class="tg-13pz"><p class="solution">$146.85</p></td>
+            <td class="tg-13pz"><p class="solution">$4,795.19</p></td>
           </tr>
           <tr>
-            <td class="tg-baqh">September</td>
-            <td class="tg-baqh"><p class="solution">$4,795.19</p></td>
-            <td class="tg-baqh"><p class="solution">$92.87</p></td>
-            <td class="tg-baqh"><p class="solution">$4,888.06</p></td>
-            <td class="tg-baqh"><p class="solution">$146.85</p></td>
-            <td class="ttg-baqh"><p class="solution">$4,741.21</p></td>
+            <th class="tg-13pz" scope="row">September</th>
+            <td class="tg-13pz"><p class="solution">$4,795.19</p></td>
+            <td class="tg-13pz"><p class="solution">$92.87</p></td>
+            <td class="tg-13pz"><p class="solution">$4,888.06</p></td>
+            <td class="tg-13pz"><p class="solution">$146.85</p></td>
+            <td class="tg-13pz"><p class="solution">$4,741.21</p></td>
           </tr>
           <tr>
-            <td class="tg-baqh">October</td>
-            <td class="tg-baqh"><p class="solution">$4,741.21</p></td>
-            <td class="tg-baqh"><p class="solution">$91.82</p></td>
-            <td class="tg-baqh"><p class="solution">$4,833.03</p></td>
-            <td class="tg-baqh"><p class="solution">$146.85</p></td>
-            <td class="tg-baqh"><p class="solution">$4,686.18</p></td>
+            <th class="tg-13pz" scope="row">October</th>
+            <td class="tg-13pz"><p class="solution">$4,741.21</p></td>
+            <td class="tg-13pz"><p class="solution">$91.82</p></td>
+            <td class="tg-13pz"><p class="solution">$4,833.03</p></td>
+            <td class="tg-13pz"><p class="solution">$146.85</p></td>
+            <td class="tg-13pz"><p class="solution">$4,686.18</p></td>
           </tr>
           <tr>
-            <td class="tg-baqh">November</td>
-            <td class="tg-baqh"><p class="solution">$4,686.18</p></td>
-            <td class="tg-baqh"><p class="solution">$90.76</p></td>
-            <td class="tg-baqh"><p class="solution">$4,776.94</p></td>
-            <td class="tg-baqh"><p class="solution">$146.85</p></td>
-            <td class="tg-baqh"><p class="solution">$4,630.09</p></td>
+            <th class="tg-13pz" scope="row">November</th>
+            <td class="tg-13pz"><p class="solution">$4,686.18</p></td>
+            <td class="tg-13pz"><p class="solution">$90.76</p></td>
+            <td class="tg-13pz"><p class="solution">$4,776.94</p></td>
+            <td class="tg-13pz"><p class="solution">$146.85</p></td>
+            <td class="tg-13pz"><p class="solution">$4,630.09</p></td>
           </tr>
           <tr>
-            <td class="tg-baqh">December</td>
-            <td class="tg-baqh"><p class="solution">$4,630.09</p></td>
-            <td class="tg-baqh"><p class="solution">$89.67</p></td>
-            <td class="tg-baqh"><p class="solution">$4,719.76</p></td>
-            <td class="tg-baqh"><p class="solution">$146.85</p></td>
-            <td class="tg-baqh"><p class="solution">$4,572.91</p></td>
+            <th class="tg-13pz" scope="row">December</th>
+            <td class="tg-13pz"><p class="solution">$4,630.09</p></td>
+            <td class="tg-13pz"><p class="solution">$89.67</p></td>
+            <td class="tg-13pz"><p class="solution">$4,719.76</p></td>
+            <td class="tg-13pz"><p class="solution">$146.85</p></td>
+            <td class="tg-13pz"><p class="solution">$4,572.91</p></td>
           </tr>
           <tr>
-            <td class="tg-baqh">January</td>
-            <td class="tg-baqh"><p class="solution">$4,572.91</p></td>
-            <td class="tg-baqh"><p class="solution">$88.56</p></td>
-            <td class="tg-baqh"><p class="solution">$4,661.47</p></td>
-            <td class="tg-baqh"><p class="solution">$146.85</p></td>
-            <td class="tg-baqh"><p class="solution">$4,514.62</p></td>
+            <th class="tg-13pz" scope="row">January</th>
+            <td class="tg-13pz"><p class="solution">$4,572.91</p></td>
+            <td class="tg-13pz"><p class="solution">$88.56</p></td>
+            <td class="tg-13pz"><p class="solution">$4,661.47</p></td>
+            <td class="tg-13pz"><p class="solution">$146.85</p></td>
+            <td class="tg-13pz"><p class="solution">$4,514.62</p></td>
           </tr>
           <tr>
-            <td class="tg-baqh">February</td>
-            <td class="tg-baqh"><p class="solution">$4,514.62</p></td>
-            <td class="tg-baqh"><p class="solution">$87.43</p></td>
-            <td class="tg-baqh"><p class="solution">$4,602.05</p></td>
-            <td class="tg-baqh"><p class="solution">$146.85</p></td>
-            <td class="tg-baqh"><p class="solution">$4,455.20</p></td>
+            <th class="tg-13pz" scope="row">February</th>
+            <td class="tg-13pz"><p class="solution">$4,514.62</p></td>
+            <td class="tg-13pz"><p class="solution">$87.43</p></td>
+            <td class="tg-13pz"><p class="solution">$4,602.05</p></td>
+            <td class="tg-13pz"><p class="solution">$146.85</p></td>
+            <td class="tg-13pz"><p class="solution">$4,455.20</p></td>
           </tr>
         </table>
 
