--- a/u2s6.html
+++ b/u2s6.html
@@ -137,46 +137,43 @@
         .tg  {border-collapse:collapse;border-spacing:0;}
         .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
         .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-        .tg .tg-1wig{font-weight:bold;text-align:left;vertical-align:top}
-        .tg .tg-5ua9{font-weight:bold;text-align:left}
-        .tg .tg-s268{text-align:left}
-        .tg .tg-0lax{text-align:left;vertical-align:top}
+        .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
         </style>
         <table class="tg">
           <tr>
-            <th class="tg-5ua9">Average Salary</th>
-            <th class="tg-5ua9">Number of States</th>
-            <th class="tg-1wig">Relative Frequency</th>
+            <th class="tg-13pz" scope="col">Average Salary</th>
+            <th class="tg-13pz" scope="col">Number of States</th>
+            <th class="tg-13pz" scope="col">Relative Frequency</th>
           </tr>
           <tr>
-            <td class="tg-5ua9">&lt;$45,000</td>
-            <td class="tg-s268"><p class="solution">2</p></td>
-            <td class="tg-s268"><p class="solution">4%</p></td>
+            <th class="tg-13pz" scope="row">&lt;$45,000</th>
+            <td class="tg-13pz"><p class="solution">2</p></td>
+            <td class="tg-13pz"><p class="solution">4%</p></td>
           </tr>
           <tr>
-            <td class="tg-5ua9">$45,000 - $50,000</td>
-            <td class="tg-s268"><p class="solution">15</p></td>
-            <td class="tg-0lax"><p class="solution">30%</p></td>
+            <th class="tg-13pz" scope="row">$45,000 - $50,000</th>
+            <td class="tg-13pz"><p class="solution">15</p></td>
+            <td class="tg-13pz"><p class="solution">30%</p></td>
           </tr>
           <tr>
-            <td class="tg-5ua9">$50,000 - $55,000</td>
-            <td class="tg-s268"><p class="solution">12</p></td>
-            <td class="tg-0lax"><p class="solution">24%</p></td>
+            <th class="tg-13pz" scope="row">$50,000 - $55,000</th>
+            <td class="tg-13pz"><p class="solution">12</p></td>
+            <td class="tg-13pz"><p class="solution">24%</p></td>
           </tr>
           <tr>
-            <td class="tg-5ua9">$55,000 - $60,000</td>
-            <td class="tg-s268"><p class="solution">7</p></td>
-            <td class="tg-0lax"><p class="solution">14%</p></td>
+            <th class="tg-13pz" scope="row">$55,000 - $60,000</th>
+            <td class="tg-13pz"><p class="solution">7</p></td>
+            <td class="tg-13pz"><p class="solution">14%</p></td>
           </tr>
           <tr>
-            <td class="tg-5ua9">$60,000 - $65,000</td>
-            <td class="tg-s268"><p class="solution">5</p></td>
-            <td class="tg-0lax"><p class="solution">10%</p></td>
+            <th class="tg-13pz" scope="row">$60,000 - $65,000</th>
+            <td class="tg-13pz"><p class="solution">5</p></td>
+            <td class="tg-13pz"><p class="solution">10%</p></td>
           </tr>
           <tr>
-            <td class="tg-5ua9">&gt;$65,000</td>
-            <td class="tg-s268"><p class="solution">9</p></td>
-            <td class="tg-0lax"><p class="solution">18%</p></td>
+            <th class="tg-13pz" scope="row">&gt;$65,000</th>
+            <td class="tg-13pz"><p class="solution">9</p></td>
+            <td class="tg-13pz"><p class="solution">18%</p></td>
           </tr>
         </table>
 
@@ -189,46 +186,51 @@
 
 <p><b>Frequency Table – U.S. Vehicle Sales September 2015</b></p>
 <p>
-<style type="text/css">
+
+
+
+  <style type="text/css">
     .tg  {border-collapse:collapse;border-spacing:0;}
     .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
     .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-    .tg .tg-1wig{font-weight:bold;text-align:left;vertical-align:top}
-    .tg .tg-5ua9{font-weight:bold;text-align:left}
-    .tg .tg-0lax{text-align:left;vertical-align:top}
+    .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
     </style>
     <table class="tg">
-      <tr>
-        <th class="tg-5ua9">Type of Vehicle</th>
-        <th class="tg-1wig">Number Sold</th>
-        <th class="tg-0lax">Relative Frequency</th>
-      </tr>
-      <tr>
-        <td class="tg-1wig">Cars</td>
-        <td class="tg-0lax">619,109</td>
-        <td class="tg-0lax"><p class="solution">44%</p></td>
-      </tr>
-      <tr>
-        <td class="tg-1wig">Pickup Trucks</td>
-        <td class="tg-0lax">214,743</td>
-        <td class="tg-0lax"><p class="solution">15%</p></td>
-      </tr>
-      <tr>
-        <td class="tg-1wig">SUV/Crossovers</td>
-        <td class="tg-0lax">529,817</td>
-        <td class="tg-0lax"><p class="solution">38%</p></td>
-      </tr>
-      <tr>
-        <td class="tg-1wig">Minivans</td>
-        <td class="tg-0lax">43,877</td>
-        <td class="tg-0lax"><p class="solution">3%</p></td>
-      </tr>
-      <tr>
-        <td class="tg-1wig">Total</td>
-        <td class="tg-0lax"><p class="solution">1,407,546</p></td>
-        <td class="tg-0lax"><p class="solution">100%</p></td>
-      </tr>
-    </table>
+        <tr>
+          <th class="tg-13pz" scope="col">Type of Vehicle</th>
+          <th class="tg-13pz" scope="col">Number Sold</th>
+          <th class="tg-13pz" scope="col">Relative Frequency</th>
+        </tr>
+        <tr>
+          <th class="tg-13pz" scope="row">Cars</th>
+          <td class="tg-13pz">619,109</td>
+          <td class="tg-13pz"><p class="solution">44%</p></td>
+        </tr>
+        <tr>
+          <th class="tg-13pz" scope="row">Pickup Trucks</th>
+          <td class="tg-13pz">214,743</td>
+          <td class="tg-13pz"><p class="solution">15%</p></td>
+        </tr>
+        <tr>
+          <th class="tg-13pz" scope="row">SUV/Crossovers</th>
+          <td class="tg-13pz">529,817</td>
+          <td class="tg-13pz"><p class="solution">38%</p></td>
+        </tr>
+        <tr>
+          <th class="tg-13pz" scope="row">Minivans</th>
+          <td class="tg-13pz">43,877</td>
+          <td class="tg-13pz"><p class="solution">3%</p></td>
+        </tr>
+        <tr>
+          <th class="tg-13pz" scope="row">Total</th>
+          <td class="tg-13pz"><p class="solution">1,407,546</p></td>
+          <td class="tg-13pz"><p class="solution">100%</p></td>
+        </tr>
+      </table>
+
+
+
+
 </p>
 
 <li>Create a pie chart showing percentages of each type of vehicle sold in September 2015.</li>
@@ -242,52 +244,48 @@
 <p><b>Time Chart - Percentage of U.S. Population that is Foreign –Born</b></p>
 
 <p>
-    <style type="text/css">
-        .tg  {border-collapse:collapse;border-spacing:0;}
-        .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-        .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-        .tg .tg-s6z2{text-align:center}
-        .tg .tg-baqh{text-align:center;vertical-align:top}
-        .tg .tg-5ua9{font-weight:bold;text-align:left}
-        .tg .tg-s268{text-align:left}
-        .tg .tg-0lax{text-align:left;vertical-align:top}
-        </style>
-        <table class="tg">
+  <style type="text/css">
+    .tg  {border-collapse:collapse;border-spacing:0;}
+    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+    .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+    .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
+    </style>
+    <table class="tg">
           <tr>
-            <th class="tg-5ua9">Year</th>
-            <th class="tg-5ua9">Percent Foreign-Born</th>
+            <th class="tg-13pz" scope="col">Year</th>
+            <th class="tg-13pz" scope="col">Percent Foreign-Born</th>
           </tr>
           <tr>
-            <td class="tg-s268">1940</td>
-            <td class="tg-s6z2">8.8</td>
+            <th class="tg-13pz" scope="row">1940</th>
+            <td class="tg-13pz">8.8</td>
           </tr>
           <tr>
-            <td class="tg-s268">1950</td>
-            <td class="tg-s6z2">6.9</td>
+            <th class="tg-13pz" scope="row">1950</th>
+            <td class="tg-13pz">6.9</td>
           </tr>
           <tr>
-            <td class="tg-s268">1960</td>
-            <td class="tg-s6z2">5.4</td>
+            <th class="tg-13pz" scope="row">1960</th>
+            <td class="tg-13pz">5.4</td>
           </tr>
           <tr>
-            <td class="tg-s268">1970</td>
-            <td class="tg-s6z2">4.7</td>
+            <th class="tg-13pz" scope="row">1970</th>
+            <td class="tg-13pz">4.7</td>
           </tr>
           <tr>
-            <td class="tg-s268">1980</td>
-            <td class="tg-s6z2">6.2</td>
+            <th class="tg-13pz" scope="row">1980</th>
+            <td class="tg-13pz">6.2</td>
           </tr>
           <tr>
-            <td class="tg-0lax">1990</td>
-            <td class="tg-baqh">8.0</td>
+            <th class="tg-13pz" scope="row">1990</th>
+            <td class="tg-13pz">8.0</td>
           </tr>
           <tr>
-            <td class="tg-0lax">2000</td>
-            <td class="tg-baqh">10.4</td>
+            <th class="tg-13pz" scope="row">2000</th>
+            <td class="tg-13pz">10.4</td>
           </tr>
           <tr>
-            <td class="tg-0lax">2010</td>
-            <td class="tg-baqh">12.2</td>
+            <th class="tg-13pz" scope="row">2010</th>
+            <td class="tg-13pz">12.2</td>
           </tr>
         </table>
 
