--- a/u2s9.html
+++ b/u2s9.html
@@ -155,8 +155,8 @@
     </style>
     <table class="tg">
       <tr>
-        <th class="tg-6esd">Middletown Snowboards</th>
-        <th class="tg-6esd">Snowboard Central</th>
+        <th class="tg-6esd" scope="col">Middletown Snowboards</th>
+        <th class="tg-6esd" scope="col">Snowboard Central</th>
       </tr>
       <tr>
         <td class="tg-x4j0">345, 350, 356, 360, 375, 405</td>
@@ -178,8 +178,8 @@
     </style>
     <table class="tg">
       <tr>
-        <th class="tg-hgcj">Middletown Snowboards</th>
-        <th class="tg-hgcj">Snowboard Central</th>
+        <th class="tg-hgcj" scope="col">Middletown Snowboards</th>
+        <th class="tg-hgcj" scope="col">Snowboard Central</th>
       </tr>
       <tr>
         <td class="tg-s268"><p class="solution">Low = 345<br>Lower Quartile = 350<br>Median = 358<br>Upper Quartile = 375<br>High = 405</p></td>
