--- a/u2s8.html
+++ b/u2s8.html
@@ -138,141 +138,136 @@
         .tg  {border-collapse:collapse;border-spacing:0;}
         .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
         .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-        .tg .tg-1wig{font-weight:bold;text-align:left;vertical-align:top}
-        .tg .tg-5ua9{font-weight:bold;text-align:left}
-        .tg .tg-m78t{font-weight:bold;color:#3531ff;text-align:left}
-        .tg .tg-s268{text-align:left}
-        .tg .tg-0lax{text-align:left;vertical-align:top}
-        .tg .tg-t4b0{font-weight:bold;color:#3531ff;text-align:left;vertical-align:top}
+        .tg .tg-13pz{font-size:18px;text-align:center;vertical-align:top}
         </style>
         <table class="tg">
           <tr>
-            <th class="tg-5ua9">Rank</th>
-            <th class="tg-5ua9">Name</th>
-            <th class="tg-5ua9">Total Pay</th>
-            <th class="tg-1wig">Salary/Winnings</th>
-            <th class="tg-1wig">Endorsements</th>
-            <th class="tg-1wig">Sport</th>
+            <th class="tg-13pz"scope="row">Rank</th>
+            <th class="tg-13pz" scope="row">Name</th>
+            <th class="tg-13pz" scope="row">Total Pay</th>
+            <th class="tg-13pz" scope="row">Salary/Winnings</th>
+            <th class="tg-13pz" scope="row">Endorsements</th>
+            <th class="tg-13pz" scope="row">Sport</th>
           </tr>
           <tr>
-            <td class="tg-m78t">#1</td>
-            <td class="tg-s268"> <a href="https://www.forbes.com/profile/floyd-mayweather/?list=athletes#6fc860432e8a" target="_blank" >Floyd Mayweather</a></td>
-            <td class="tg-s268">$285 M</td>
-            <td class="tg-0lax">$275 M</td>
-            <td class="tg-0lax">$10 M</td>
-            <td class="tg-0lax">Boxing</td>
+            <th class="tg-13pz" scope="row">#1</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/floyd-mayweather/?list=athletes#6fc860432e8a" target="_blank" >Floyd Mayweather</a></td>
+            <td class="tg-13pz">$285 M</td>
+            <td class="tg-13pz">$275 M</td>
+            <td class="tg-13pz">$10 M</td>
+            <td class="tg-13pz">Boxing</td>
           </tr>
           <tr>
-            <td class="tg-m78t">#2</td>
-            <td class="tg-s268"> <a href="https://www.forbes.com/profile/lionel-messi/?list=athletes#4929b14e5e9f" target="_blank">Lionel Messi</a></td>
-            <td class="tg-s268">$111 M</td>
-            <td class="tg-0lax">$84 M</td>
-            <td class="tg-0lax">$ 27</td>
-            <td class="tg-0lax">Soccer</td>
+            <th class="tg-13pz" scope="row">#2</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/lionel-messi/?list=athletes#4929b14e5e9f" target="_blank">Lionel Messi</a></td>
+            <td class="tg-13pz">$111 M</td>
+            <td class="tg-13pz">$84 M</td>
+            <td class="tg-13pz">$ 27</td>
+            <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
-            <td class="tg-m78t">#3</td>
-            <td class="tg-s268"><a href="https://www.forbes.com/profile/cristiano-ronaldo/?list=athletes#5d980ab6565d" target="_blank">Cristiano Ronaldo</a></td>
-            <td class="tg-s268">$108 M</td>
-            <td class="tg-0lax">$61 M</td>
-            <td class="tg-0lax">$47 M</td>
-            <td class="tg-0lax">Soccer</td>
+            <th class="tg-13pz" scope="row">#3</th>
+            <td class="tg-13pz"><a href="https://www.forbes.com/profile/cristiano-ronaldo/?list=athletes#5d980ab6565d" target="_blank">Cristiano Ronaldo</a></td>
+            <td class="tg-13pz">$108 M</td>
+            <td class="tg-13pz">$61 M</td>
+            <td class="tg-13pz">$47 M</td>
+            <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
-            <td class="tg-m78t">#4</td>
-            <td class="tg-s268"><a href="https://www.forbes.com/profile/conor-mcgregor/?list=athletes#7409e5b17595" target="_blank">Conor McGregor</a></td>
-            <td class="tg-s268">$99 M</td>
-            <td class="tg-0lax">$85 M</td>
-            <td class="tg-0lax">$14 M</td>
-            <td class="tg-0lax">Mixed Martial Arts</td>
+            <th class="tg-13pz" scope="row">#4</th>
+            <td class="tg-13pz"><a href="https://www.forbes.com/profile/conor-mcgregor/?list=athletes#7409e5b17595" target="_blank">Conor McGregor</a></td>
+            <td class="tg-13pz">$99 M</td>
+            <td class="tg-13pz">$85 M</td>
+            <td class="tg-13pz">$14 M</td>
+            <td class="tg-13pz">Mixed Martial Arts</td>
           </tr>
           <tr>
-            <td class="tg-m78t">#5</td>
-            <td class="tg-s268"><a href="https://www.forbes.com/profile/neymar/?list=athletes#18ab2708695c" target="_blank" >Neymar</a></td>
-            <td class="tg-s268">$90 M</td>
-            <td class="tg-0lax">$71 M</td>
-            <td class="tg-0lax">$19 M</td>
-            <td class="tg-0lax">Soccer</td>
+            <th class="tg-13pz" scope="row">#5</th>
+            <td class="tg-13pz"><a href="https://www.forbes.com/profile/neymar/?list=athletes#18ab2708695c" target="_blank" >Neymar</a></td>
+            <td class="tg-13pz">$90 M</td>
+            <td class="tg-13pz">$71 M</td>
+            <td class="tg-13pz">$19 M</td>
+            <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
-            <td class="tg-m78t">#6</td>
-            <td class="tg-s268"><a href="https://www.forbes.com/profile/lebron-james/?list=athletes#681c638e2398" target="_blank">Lebron James</a></td>
-            <td class="tg-s268">$85.5 M</td>
-            <td class="tg-0lax">$33.5 M</td>
-            <td class="tg-0lax">$52 M</td>
-            <td class="tg-0lax">Basketball</td>
+            <th class="tg-13pz" scope="row">#6</th>
+            <td class="tg-13pz"><a href="https://www.forbes.com/profile/lebron-james/?list=athletes#681c638e2398" target="_blank">Lebron James</a></td>
+            <td class="tg-13pz">$85.5 M</td>
+            <td class="tg-13pz">$33.5 M</td>
+            <td class="tg-13pz">$52 M</td>
+            <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
-            <td class="tg-m78t">#7</td>
-            <td class="tg-s268"> <a href="https://www.forbes.com/profile/roger-federer/?list=athletes#69fd5e6114ba" target="_blank"> Roger Federer</a></td>
-            <td class="tg-s268">$77.2 M</td>
-            <td class="tg-0lax">$12.2 M</td>
-            <td class="tg-0lax">$65 M</td>
-            <td class="tg-0lax">Tennis</td>
+            <th class="tg-13pz" scope="row">#7</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/roger-federer/?list=athletes#69fd5e6114ba" target="_blank"> Roger Federer</a></td>
+            <td class="tg-13pz">$77.2 M</td>
+            <td class="tg-13pz">$12.2 M</td>
+            <td class="tg-13pz">$65 M</td>
+            <td class="tg-13pz">Tennis</td>
           </tr>
           <tr>
-            <td class="tg-t4b0">#8</td>
-            <td class="tg-0lax"> <a href="https://www.forbes.com/profile/stephen-curry/?list=athletes#280e4272437c" target="_blank"> Stephen Curry</a></td>
-            <td class="tg-0lax">$76.9 M</td>
-            <td class="tg-0lax">$34.9 M</td>
-            <td class="tg-0lax">$42 M</td>
-            <td class="tg-0lax">Basketball</td>
+            <th class="tg-13pz" scope="row">#8</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/stephen-curry/?list=athletes#280e4272437c" target="_blank"> Stephen Curry</a></td>
+            <td class="tg-13pz">$76.9 M</td>
+            <td class="tg-13pz">$34.9 M</td>
+            <td class="tg-13pz">$42 M</td>
+            <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
-            <td class="tg-t4b0">#9</td>
-            <td class="tg-0lax"> <a href="https://www.forbes.com/profile/matt-ryan/?list=athletes#7ccf07b73863" target="_blank"> Matt Ryan</a></td>
-            <td class="tg-0lax">$67.3 M</td>
-            <td class="tg-0lax">$62.3 M</td>
-            <td class="tg-0lax">$5 M</td>
-            <td class="tg-0lax">Football</td>
+            <th class="tg-13pz" scope="row">#9</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/matt-ryan/?list=athletes#7ccf07b73863" target="_blank"> Matt Ryan</a></td>
+            <td class="tg-13pz">$67.3 M</td>
+            <td class="tg-13pz">$62.3 M</td>
+            <td class="tg-13pz">$5 M</td>
+            <td class="tg-13pz">Football</td>
           </tr>
           <tr>
-            <td class="tg-t4b0">#10</td>
-            <td class="tg-0lax"> <a href="https://www.forbes.com/profile/matthew-stafford/?list=athletes#23ffaf1f1aef" target="_blank"> Matthew Stafford</a></td>
-            <td class="tg-0lax">$59.5 M</td>
-            <td class="tg-0lax">$57.5 M</td>
-            <td class="tg-0lax">$2 M</td>
-            <td class="tg-0lax">Football</td>
+            <th class="tg-13pz" scope="row">#10</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/matthew-stafford/?list=athletes#23ffaf1f1aef" target="_blank"> Matthew Stafford</a></td>
+            <td class="tg-13pz">$59.5 M</td>
+            <td class="tg-13pz">$57.5 M</td>
+            <td class="tg-13pz">$2 M</td>
+            <td class="tg-13pz">Football</td>
           </tr>
           <tr>
-            <td class="tg-t4b0">#11</td>
-            <td class="tg-0lax"> <a href="https://www.forbes.com/profile/kevin-durant/?list=athletes#4a06872377e6" target ="_blank"> Kevin Durant</a></td>
-            <td class="tg-0lax">$57.3 M</td>
-            <td class="tg-0lax">$25.3 M</td>
-            <td class="tg-0lax">$32 M</td>
-            <td class="tg-0lax">Basketball</td>
+            <th class="tg-13pz" scope="row">#11</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/kevin-durant/?list=athletes#4a06872377e6" target ="_blank"> Kevin Durant</a></td>
+            <td class="tg-13pz">$57.3 M</td>
+            <td class="tg-13pz">$25.3 M</td>
+            <td class="tg-13pz">$32 M</td>
+            <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
-            <td class="tg-t4b0">#12</td>
-            <td class="tg-0lax"> <a href="https://www.forbes.com/profile/lewis-hamilton/?list=athletes#199123de142a" target="_blank"> Lewis Hamilton</a></td>
-            <td class="tg-0lax">$51 M</td>
-            <td class="tg-0lax">$42 M</td>
-            <td class="tg-0lax">$9 M</td>
-            <td class="tg-0lax">Auto Racing</td>
+            <th class="tg-13pz" scope="row">#12</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/lewis-hamilton/?list=athletes#199123de142a" target="_blank"> Lewis Hamilton</a></td>
+            <td class="tg-13pz">$51 M</td>
+            <td class="tg-13pz">$42 M</td>
+            <td class="tg-13pz">$9 M</td>
+            <td class="tg-13pz">Auto Racing</td>
           </tr>
           <tr>
-            <td class="tg-t4b0">#13</td>
-            <td class="tg-0lax"> <a href="https://www.forbes.com/profile/russell-westbrook/?list=athletes#1201dabe2f40" target="_blank"> Russell Westbrook</a></td>
-            <td class="tg-0lax">$47.6 M</td>
-            <td class="tg-0lax">$28.6 M</td>
-            <td class="tg-0lax">$19 M</td>
-            <td class="tg-0lax">Basketball</td>
+            <th class="tg-13pz" scope="row">#13</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/russell-westbrook/?list=athletes#1201dabe2f40" target="_blank"> Russell Westbrook</a></td>
+            <td class="tg-13pz">$47.6 M</td>
+            <td class="tg-13pz">$28.6 M</td>
+            <td class="tg-13pz">$19 M</td>
+            <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
-            <td class="tg-t4b0">#14</td>
-            <td class="tg-0lax"> <a href="https://www.forbes.com/profile/james-harden/?list=athletes#4d028e4e10aa" target="_blank"> James Harden</a></td>
-            <td class="tg-0lax">$46.4 M</td>
-            <td class="tg-0lax">$28.4 M</td>
-            <td class="tg-0lax">$18 M</td>
-            <td class="tg-0lax">Basketball</td>
+            <th class="tg-13pz" scope="row">#14</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/james-harden/?list=athletes#4d028e4e10aa" target="_blank"> James Harden</a></td>
+            <td class="tg-13pz">$46.4 M</td>
+            <td class="tg-13pz">$28.4 M</td>
+            <td class="tg-13pz">$18 M</td>
+            <td class="tg-13pz">Basketball</td>
           </tr>
           <tr>
-            <td class="tg-t4b0">#15</td>
-            <td class="tg-0lax"> <a href="https://www.forbes.com/profile/canelo-alvarez/?list=athletes#649340d95a8d" target="_blank"> Canelo Alvarez</a></td>
-            <td class="tg-0lax">$44.5 M</td>
-            <td class="tg-0lax">$42 M</td>
-            <td class="tg-0lax">$2.5 M</td>
-            <td class="tg-0lax">Boxing</td>
+            <th class="tg-13pz" scope="row">#15</th>
+            <td class="tg-13pz"> <a href="https://www.forbes.com/profile/canelo-alvarez/?list=athletes#649340d95a8d" target="_blank"> Canelo Alvarez</a></td>
+            <td class="tg-13pz">$44.5 M</td>
+            <td class="tg-13pz">$42 M</td>
+            <td class="tg-13pz">$2.5 M</td>
+            <td class="tg-13pz">Boxing</td>
           </tr>
         </table>
 <p>Source <a href="https://www.forbes.com/athletes/list/#tab:overall" target="_blank">Highest Paid Athletes List From Forbes</a> </p>
