--- a/u3s1.html
+++ b/u3s1.html
@@ -197,17 +197,17 @@ Part I: Discovering the Metric System
   </style>
   <table class="tg">
     <tr>
-      <th class="tg-60hs">Prefix</th>
-      <th class="tg-7hap">kilo-</th>
-      <th class="tg-7hap">hecto-</th>
-      <th class="tg-7hap">deka</th>
-      <th class="tg-7hap">meters<br>liters<br>grams</th>
-      <th class="tg-7hap">deci</th>
-      <th class="tg-7hap">centi</th>
-      <th class="tg-7hap">milli</th>
+      <th class="tg-60hs" scope="col">Prefix</th>
+      <th class="tg-7hap" scope="col">kilo-</th>
+      <th class="tg-7hap" scope="col">hecto-</th>
+      <th class="tg-7hap" scope="col">deka-</th>
+      <th class="tg-7hap" scope="col">meters<br>liters<br>grams</th>
+      <th class="tg-7hap" scope="col">deci-</th>
+      <th class="tg-7hap" scope="col">centi-</th>
+      <th class="tg-7hap" scope="col">milli-</th>
     </tr>
     <tr>
-      <td class="tg-7hap">Symbol</td>
+      <th class="tg-7hap" scope="row">Symbol</th>
       <td class="tg-nx8p">k</td>
       <td class="tg-nx8p">h</td>
       <td class="tg-nx8p">dk</td>
@@ -217,7 +217,7 @@ Part I: Discovering the Metric System
       <td class="tg-nx8p">m</td>
     </tr>
     <tr>
-      <td class="tg-7hap">Meaning</td>
+      <th class="tg-7hap" scope="row">Meaning</th>
       <td class="tg-nx8p">1000</td>
       <td class="tg-nx8p">100</td>
       <td class="tg-nx8p">10</td>
