--- a/u3s5.html
+++ b/u3s5.html
@@ -160,12 +160,12 @@
       </style>
       <table class="tg">
         <tr>
-          <th class="tg-s268"> Area of Rectangle</th>
-          <th class="tg-s268">Area of Triangle&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-          <th class="tg-s268">Area of the Garage Door&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+          <th class="tg-s268" scope="col"> Area of Rectangle</th>
+          <th class="tg-s268" scope="col">Area of Triangle</th>
+          <th class="tg-s268" scope="col">Area of the Garage Door</th>
         </tr>
         <tr>
-          <td class="tg-s268"><br><br><p class="solution"> \(\begin{equation}
+          <td class="tg-s268" ><br><br><p class="solution"> \(\begin{equation}
             A=L W
             \end{equation} \)</p> <p class="solution">\(\begin{equation}
               A=26 \cdot 10.5
@@ -190,14 +190,14 @@
           </td>
         </tr>
         <tr>
-          <td class="tg-s268" colspan="3">Area to be painted = Area of rectangle + Area of triangle - Area of door<br> <p class="solution">\begin{equation}
+          <th class="tg-s268" colspan="3" cope="col">Area to be painted = Area of rectangle + Area of triangle - Area of door<br> <p class="solution">\begin{equation}
             273+61.75-112=222.75
-            \end{equation}</p><br></td>
+            \end{equation}</p><br></th>
         </tr>
         <tr>
-          <td class="tg-s268" colspan="3">Area of siding to be painted = <p class="solution">\begin{equation}
+          <th class="tg-s268" colspan="3" scope="col">Area of siding to be painted = <p class="solution">\begin{equation}
             222.75 \text{ ft}^{2}
-            \end{equation}</p></td>
+            \end{equation}</p></th>
         </tr>
       </table>
 
