--- a/u2s9.html
+++ b/u2s9.html
@@ -320,7 +320,7 @@
       <li>The second quartile is 600.</li>
       <li>The mean of the attendance is 400.</li>
       <li>The range of the attendance is 300 to 600.</li>
-      <li>d)	Twenty-five percent of the attendance is between 300 and 400.</li>
+      <li>Twenty-five percent of the attendance is between 300 and 400.</li>
     </ol>
     <p class="solution">d. Twenty-five percent of the attendance is between 300 and 400.</p>
 </li>
